// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Bedrock Agentcore Runtime Snapshot Tests Bedrock Agentcore Runtime App App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-main": {
    "Description": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-main:agentruntimeendpoint:testagentruntime:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeEndpointArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-main:agentruntimeendpoint:testagentruntime:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Id",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-main:agentruntime:testagentruntime:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-main:agentruntime:testagentruntime:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-main:agentruntime:testagentruntime:name",
        },
        "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-main-testagentruntime",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AgentRuntimeArtifact": {
            "ContainerConfiguration": {
              "ContainerUri": "1234567890.dkr.ecr.us-east-1.amazonaws.com/test-runtime:latest",
            },
          },
          "AgentRuntimeName": "test_org_test_env_test_domain_test_bedr__82df822",
          "AuthorizerConfiguration": {
            "CustomJWTAuthorizer": {
              "AllowedAudience": [
                "test-client-id",
              ],
              "AllowedClients": [
                "test-client-app-1",
                "test-client-app-2",
              ],
              "DiscoveryUrl": {
                "Fn::Join": [
                  "",
                  [
                    "https://cognito-idp.",
                    {
                      "Ref": "AWS::Region",
                    },
                    ".amazonaws.com/",
                    {
                      "Ref": "AWS::Region",
                    },
                    "_test/.well-known/openid-configuration",
                  ],
                ],
              },
            },
          },
          "Description": "Test agent runtime for unit testing",
          "EnvironmentVariables": {
            "ENVIRONMENT": "test",
            "LOG_LEVEL": "DEBUG",
          },
          "LifecycleConfiguration": {
            "IdleRuntimeSessionTimeout": 3600,
            "MaxLifetime": 7200,
          },
          "NetworkConfiguration": {
            "NetworkMode": "VPC",
            "NetworkModeConfig": {
              "SecurityGroups": [
                "sg-12345678",
                "sg-87654321",
              ],
              "Subnets": [
                "REPLACED-S3-BUCKET-NAME",
                "REPLACED-S3-BUCKET-NAME",
                "REPLACED-S3-BUCKET-NAME",
              ],
            },
          },
          "ProtocolConfiguration": "MCP",
          "RequestHeaderConfiguration": {
            "RequestHeaderAllowlist": [
              "X-Custom-Header",
              "X-Request-Id",
            ],
          },
          "RoleArn": {
            "Fn::Join": [
              "",
              [
                "arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":iam::",
                {
                  "Ref": "AWS::AccountId",
                },
                ":role/test-runtime-role",
              ],
            ],
          },
        },
        "Type": "AWS::BedrockAgentCore::Runtime",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "AgentRuntimeId": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeId",
            ],
          },
          "AgentRuntimeVersion": "1.0.0",
          "Description": "Test runtime endpoint",
          "Name": "test_org_test_env_test_domain_test_bedr_234a2cb0",
        },
        "Type": "AWS::BedrockAgentCore::RuntimeEndpoint",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "IndexingPercentage": 1,
        },
        "Type": "AWS::XRay::TransactionSearchConfig",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "PolicyDocument": {
            "Fn::Join": [
              "",
              [
                "{"Statement":[{"Action":"logs:PutLogEvents","Condition":{"ArnLike":{"aws:SourceArn":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":xray:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":*"},"StringEquals":{"aws:SourceAccount":"",
                {
                  "Ref": "AWS::AccountId",
                },
                ""}},"Effect":"Allow","Principal":{"Service":"xray.amazonaws.com"},"Resource":["arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:aws/spans:*","arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:/aws/application-signals/data:*"],"Sid":"TransactionSearchXRayAccess"}],"Version":"2012-10-17"}",
              ],
            ],
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
        },
        "Type": "AWS::Logs::ResourcePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/agentruntimeendpoint/testagentruntime/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeEndpointArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/agentruntimeendpoint/testagentruntime/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Id",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/agentruntime/testagentruntime/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/agentruntime/testagentruntime/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-main/agentruntime/testagentruntime/name",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-main",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-main-testagentruntime",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`Bedrock Agentcore Runtime Snapshot Tests Bedrock Agentcore Runtime App Codepath App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-codepath": {
    "Description": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:role:bedrockagentcoreruntimetestagentruntimecodepath:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:role:bedrockagentcoreruntimetestagentruntimecodepath:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "RoleId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:role:bedrockagentcoreruntimetestagentruntimecodepath:name",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:agentruntime:testagentruntimecodepath:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:agentruntime:testagentruntimecodepath:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-codepath:agentruntime:testagentruntimecodepath:name",
        },
        "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-codepath-testagentruntimecodepath",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AgentRuntimeArtifact": {
            "ContainerConfiguration": {
              "ContainerUri": {
                "Fn::Sub": "\${AWS::AccountId}.dkr.ecr.\${AWS::Region}.\${AWS::URLSuffix}/cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}:ASSET-HASH",
              },
            },
          },
          "AgentRuntimeName": "test_org_test_env_test_domain_test_bed__331064c9",
          "AuthorizerConfiguration": {
            "CustomJWTAuthorizer": {
              "AllowedAudience": [
                "test-audience",
              ],
              "AllowedClients": [
                "test-client-app",
              ],
              "DiscoveryUrl": {
                "Fn::Join": [
                  "",
                  [
                    "https://cognito-idp.",
                    {
                      "Ref": "AWS::Region",
                    },
                    ".amazonaws.com/",
                    {
                      "Ref": "AWS::Region",
                    },
                    "_test/.well-known/openid-configuration",
                  ],
                ],
              },
            },
          },
          "NetworkConfiguration": {
            "NetworkMode": "VPC",
            "NetworkModeConfig": {
              "SecurityGroups": [
                "sg-12345678",
              ],
              "Subnets": [
                "REPLACED-S3-BUCKET-NAME",
              ],
            },
          },
          "ProtocolConfiguration": "MCP",
          "RoleArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::BedrockAgentCore::Runtime",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
            ],
          },
        },
        "Properties": {
          "Description": "Managed policy for Bedrock AgentCore Runtime: testAgentRuntimeCodePath",
          "ManagedPolicyName": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-codepath-bedrock-agentcore-runtime-testagentruntimecodepath",
          "Path": "/",
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "ecr:GetAuthorizationToken",
                "Effect": "Allow",
                "Resource": "*",
                "Sid": "ECRTokenAccess",
              },
              {
                "Action": [
                  "logs:DescribeLogStreams",
                  "logs:CreateLogGroup",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/bedrock-agentcore/runtimes/*",
                    ],
                  ],
                },
              },
              {
                "Action": "logs:DescribeLogGroups",
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:*",
                    ],
                  ],
                },
              },
              {
                "Action": [
                  "logs:CreateLogStream",
                  "logs:PutLogEvents",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/bedrock-agentcore/runtimes/*:log-stream:*",
                    ],
                  ],
                },
              },
              {
                "Action": [
                  "xray:PutTraceSegments",
                  "xray:PutTelemetryRecords",
                  "xray:GetSamplingRules",
                  "xray:GetSamplingTargets",
                ],
                "Effect": "Allow",
                "Resource": "*",
              },
              {
                "Action": "cloudwatch:PutMetricData",
                "Condition": {
                  "StringEquals": {
                    "cloudwatch:namespace": "bedrock-agentcore",
                  },
                },
                "Effect": "Allow",
                "Resource": "*",
              },
              {
                "Action": [
                  "bedrock-agentcore:GetWorkloadAccessToken",
                  "bedrock-agentcore:GetWorkloadAccessTokenForJWT",
                  "bedrock-agentcore:GetWorkloadAccessTokenForUserId",
                ],
                "Effect": "Allow",
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock-agentcore:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":workload-identity-directory/default",
                      ],
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock-agentcore:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":workload-identity-directory/default/workload-identity/hosted_agent_*",
                      ],
                    ],
                  },
                ],
                "Sid": "GetAgentAccessToken",
              },
              {
                "Action": [
                  "bedrock:InvokeModel",
                  "bedrock:InvokeModelWithResponseStream",
                ],
                "Effect": "Allow",
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock:*::foundation-model/*",
                      ],
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":*",
                      ],
                    ],
                  },
                ],
                "Sid": "BedrockModelInvocation",
              },
              {
                "Action": [
                  "ecr:GetDownloadUrlForLayer",
                  "ecr:BatchGetImage",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ecr:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":repository/",
                      {
                        "Fn::Sub": "cdk-hnb659fds-container-assets-\${AWS::AccountId}-\${AWS::Region}",
                      },
                    ],
                  ],
                },
                "Sid": "ECRRepositoryAccess",
              },
            ],
            "Version": "2012-10-17",
          },
        },
        "Type": "AWS::IAM::ManagedPolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Condition": {
                  "ArnLike": {
                    "aws:SourceArn": {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":bedrock-agentcore:",
                          {
                            "Ref": "AWS::Region",
                          },
                          ":",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":*",
                        ],
                      ],
                    },
                  },
                  "StringEquals": {
                    "aws:SourceAccount": {
                      "Ref": "AWS::AccountId",
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "bedrock-agentcore.amazonaws.com",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "Description": "IAM role for Bedrock AgentCore Runtime: testAgentRuntimeCodePath",
          "ManagedPolicyArns": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
          "RoleName": "test-org-test-env-test-domain-test-bedrock-agentcore-ru--619c724",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "bedrock-agentcore-runtime",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-bedrock-agentcore-runtime-codepath",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::IAM::Role",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/role/bedrock-agentcore-runtime-testagentruntimecodepath/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/role/bedrock-agentcore-runtime-testagentruntimecodepath/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "RoleId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/role/bedrock-agentcore-runtime-testagentruntimecodepath/name",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "IndexingPercentage": 1,
        },
        "Type": "AWS::XRay::TransactionSearchConfig",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "PolicyDocument": {
            "Fn::Join": [
              "",
              [
                "{"Statement":[{"Action":"logs:PutLogEvents","Condition":{"ArnLike":{"aws:SourceArn":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":xray:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":*"},"StringEquals":{"aws:SourceAccount":"",
                {
                  "Ref": "AWS::AccountId",
                },
                ""}},"Effect":"Allow","Principal":{"Service":"xray.amazonaws.com"},"Resource":["arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:aws/spans:*","arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:/aws/application-signals/data:*"],"Sid":"TransactionSearchXRayAccess"}],"Version":"2012-10-17"}",
              ],
            ],
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
        },
        "Type": "AWS::Logs::ResourcePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/agentruntime/testagentruntimecodepath/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/agentruntime/testagentruntimecodepath/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-codepath/agentruntime/testagentruntimecodepath/name",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-codepath",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-codepath-testagentruntimecodepath",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;

exports[`Bedrock Agentcore Runtime Snapshot Tests Bedrock Agentcore Runtime App Minimal App Snapshot Test 1`] = `
{
  "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-minimal": {
    "Description": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
    "Outputs": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:role:bedrockagentcoreruntimetestagentruntime:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "Arn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:role:bedrockagentcoreruntimetestagentruntime:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "RoleId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:role:bedrockagentcoreruntimetestagentruntime:name",
        },
        "Value": {
          "Ref": "REPLACED-CFN-LOGICAL-ID",
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:agentruntime:testagentruntime:arn",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeArn",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:agentruntime:testagentruntime:id",
        },
        "Value": {
          "Fn::GetAtt": [
            "REPLACED-CFN-LOGICAL-ID",
            "AgentRuntimeId",
          ],
        },
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Export": {
          "Name": "test-org:test-domain:test-bedrock-agentcore-runtime-minimal:agentruntime:testagentruntime:name",
        },
        "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-minimal-testagentruntime",
      },
    },
    "Parameters": {
      "BootstrapVersion": {
        "Default": "/cdk-bootstrap/hnb659fds/version",
        "Description": "Version of the CDK Bootstrap resources in this environment, automatically retrieved from SSM Parameter Store. [cdk:skip]",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
      "SsmParameterValuetestorgtestdomaincaefbootstraprolehelperservicetokenC96584B6F00A464EAD1953AFF4B05118Parameter": {
        "Default": "/test-org/test-domain/caef-bootstrap/role-helper-service-token",
        "Type": "AWS::SSM::Parameter::Value<String>",
      },
    },
    "Resources": {
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Description": "Stack description parameter to update on version changes",
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/aws-solution",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "(SO0320-bedrock-agentcore-runtime) Modern Data Architecture Accelerator. Version 1.5.0",
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "AgentRuntimeArtifact": {
            "ContainerConfiguration": {
              "ContainerUri": "1234567890.dkr.ecr.us-east-1.amazonaws.com/test-runtime:latest",
            },
          },
          "AgentRuntimeName": "test_org_test_env_test_domain_test_bedr_745873cc",
          "NetworkConfiguration": {
            "NetworkMode": "VPC",
            "NetworkModeConfig": {
              "SecurityGroups": [
                "sg-12345678",
              ],
              "Subnets": [
                "REPLACED-S3-BUCKET-NAME",
              ],
            },
          },
          "ProtocolConfiguration": "HTTP",
          "RoleArn": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::BedrockAgentCore::Runtime",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
            ],
          },
        },
        "Properties": {
          "Description": "Managed policy for Bedrock AgentCore Runtime: testAgentRuntime",
          "ManagedPolicyName": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-minimal-bedrock-agentcore-runtime-testagentruntime",
          "Path": "/",
          "PolicyDocument": {
            "Statement": [
              {
                "Action": "ecr:GetAuthorizationToken",
                "Effect": "Allow",
                "Resource": "*",
                "Sid": "ECRTokenAccess",
              },
              {
                "Action": [
                  "logs:DescribeLogStreams",
                  "logs:CreateLogGroup",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/bedrock-agentcore/runtimes/*",
                    ],
                  ],
                },
              },
              {
                "Action": "logs:DescribeLogGroups",
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:*",
                    ],
                  ],
                },
              },
              {
                "Action": [
                  "logs:CreateLogStream",
                  "logs:PutLogEvents",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":logs:",
                      {
                        "Ref": "AWS::Region",
                      },
                      ":",
                      {
                        "Ref": "AWS::AccountId",
                      },
                      ":log-group:/aws/bedrock-agentcore/runtimes/*:log-stream:*",
                    ],
                  ],
                },
              },
              {
                "Action": [
                  "xray:PutTraceSegments",
                  "xray:PutTelemetryRecords",
                  "xray:GetSamplingRules",
                  "xray:GetSamplingTargets",
                ],
                "Effect": "Allow",
                "Resource": "*",
              },
              {
                "Action": "cloudwatch:PutMetricData",
                "Condition": {
                  "StringEquals": {
                    "cloudwatch:namespace": "bedrock-agentcore",
                  },
                },
                "Effect": "Allow",
                "Resource": "*",
              },
              {
                "Action": [
                  "bedrock-agentcore:GetWorkloadAccessToken",
                  "bedrock-agentcore:GetWorkloadAccessTokenForJWT",
                  "bedrock-agentcore:GetWorkloadAccessTokenForUserId",
                ],
                "Effect": "Allow",
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock-agentcore:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":workload-identity-directory/default",
                      ],
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock-agentcore:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":workload-identity-directory/default/workload-identity/hosted_agent_*",
                      ],
                    ],
                  },
                ],
                "Sid": "GetAgentAccessToken",
              },
              {
                "Action": [
                  "bedrock:InvokeModel",
                  "bedrock:InvokeModelWithResponseStream",
                ],
                "Effect": "Allow",
                "Resource": [
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock:*::foundation-model/*",
                      ],
                    ],
                  },
                  {
                    "Fn::Join": [
                      "",
                      [
                        "arn:",
                        {
                          "Ref": "AWS::Partition",
                        },
                        ":bedrock:",
                        {
                          "Ref": "AWS::Region",
                        },
                        ":",
                        {
                          "Ref": "AWS::AccountId",
                        },
                        ":*",
                      ],
                    ],
                  },
                ],
                "Sid": "BedrockModelInvocation",
              },
              {
                "Action": [
                  "ecr:GetDownloadUrlForLayer",
                  "ecr:BatchGetImage",
                ],
                "Effect": "Allow",
                "Resource": {
                  "Fn::Join": [
                    "",
                    [
                      "arn:",
                      {
                        "Ref": "AWS::Partition",
                      },
                      ":ecr:us-east-1:1234567890:repository/test-runtime",
                    ],
                  ],
                },
                "Sid": "ECRRepositoryAccess",
              },
            ],
            "Version": "2012-10-17",
          },
        },
        "Type": "AWS::IAM::ManagedPolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "AssumeRolePolicyDocument": {
            "Statement": [
              {
                "Action": "sts:AssumeRole",
                "Condition": {
                  "ArnLike": {
                    "aws:SourceArn": {
                      "Fn::Join": [
                        "",
                        [
                          "arn:",
                          {
                            "Ref": "AWS::Partition",
                          },
                          ":bedrock-agentcore:",
                          {
                            "Ref": "AWS::Region",
                          },
                          ":",
                          {
                            "Ref": "AWS::AccountId",
                          },
                          ":*",
                        ],
                      ],
                    },
                  },
                  "StringEquals": {
                    "aws:SourceAccount": {
                      "Ref": "AWS::AccountId",
                    },
                  },
                },
                "Effect": "Allow",
                "Principal": {
                  "Service": "bedrock-agentcore.amazonaws.com",
                },
              },
            ],
            "Version": "2012-10-17",
          },
          "Description": "IAM role for Bedrock AgentCore Runtime: testAgentRuntime",
          "ManagedPolicyArns": [
            {
              "Ref": "REPLACED-CFN-LOGICAL-ID",
            },
          ],
          "RoleName": "test-org-test-env-test-domain-test-bedrock-agentcore-r--7147ac4f",
          "Tags": [
            {
              "Key": "mdaa_cdk_app",
              "Value": "bedrock-agentcore-runtime",
            },
            {
              "Key": "mdaa_domain",
              "Value": "test-domain",
            },
            {
              "Key": "mdaa_env",
              "Value": "test-env",
            },
            {
              "Key": "mdaa_module_name",
              "Value": "test-bedrock-agentcore-runtime-minimal",
            },
            {
              "Key": "mdaa_org",
              "Value": "test-org",
            },
          ],
        },
        "Type": "AWS::IAM::Role",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/role/bedrock-agentcore-runtime-testagentruntime/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "Arn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/role/bedrock-agentcore-runtime-testagentruntime/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "RoleId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Metadata": {
          "cdk_nag": {
            "rules_to_suppress": [
              {
                "id": "AwsSolutions-IAM5",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Wildcard resources required for ECR GetAuthorizationToken (global service), X-Ray, CloudWatch Metrics (scoped by namespace condition), and Bedrock foundation models",
              },
              {
                "id": "AwsSolutions-IAM4",
                "reason": "[MDAA:@aws-mdaa/ai/bedrock-agentcore-runtime-l3-construct/lib/bedrock-agentcore-runtime-l3-construct.ts:LINE:COL] Using customer managed policies for Bedrock AgentCore Runtime as required for compliance",
              },
            ],
          },
        },
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/role/bedrock-agentcore-runtime-testagentruntime/name",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Ref": "REPLACED-CFN-LOGICAL-ID",
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "DependsOn": [
          "REPLACED-CFN-LOGICAL-ID",
        ],
        "Properties": {
          "IndexingPercentage": 1,
        },
        "Type": "AWS::XRay::TransactionSearchConfig",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "PolicyDocument": {
            "Fn::Join": [
              "",
              [
                "{"Statement":[{"Action":"logs:PutLogEvents","Condition":{"ArnLike":{"aws:SourceArn":"arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":xray:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":*"},"StringEquals":{"aws:SourceAccount":"",
                {
                  "Ref": "AWS::AccountId",
                },
                ""}},"Effect":"Allow","Principal":{"Service":"xray.amazonaws.com"},"Resource":["arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:aws/spans:*","arn:",
                {
                  "Ref": "AWS::Partition",
                },
                ":logs:",
                {
                  "Ref": "AWS::Region",
                },
                ":",
                {
                  "Ref": "AWS::AccountId",
                },
                ":log-group:/aws/application-signals/data:*"],"Sid":"TransactionSearchXRayAccess"}],"Version":"2012-10-17"}",
              ],
            ],
          },
          "PolicyName": "REPLACED-CFN-LOGICAL-ID",
        },
        "Type": "AWS::Logs::ResourcePolicy",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/agentruntime/testagentruntime/arn",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeArn",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/agentruntime/testagentruntime/id",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": {
            "Fn::GetAtt": [
              "REPLACED-CFN-LOGICAL-ID",
              "AgentRuntimeId",
            ],
          },
        },
        "Type": "AWS::SSM::Parameter",
      },
      "REPLACED-CFN-LOGICAL-ID": {
        "Properties": {
          "Name": "/test-org/test-domain/test-bedrock-agentcore-runtime-minimal/agentruntime/testagentruntime/name",
          "Tags": {
            "mdaa_cdk_app": "bedrock-agentcore-runtime",
            "mdaa_domain": "test-domain",
            "mdaa_env": "test-env",
            "mdaa_module_name": "test-bedrock-agentcore-runtime-minimal",
            "mdaa_org": "test-org",
          },
          "Type": "String",
          "Value": "test-org-test-env-test-domain-test-bedrock-agentcore-runtime-minimal-testagentruntime",
        },
        "Type": "AWS::SSM::Parameter",
      },
    },
    "Rules": {
      "CheckBootstrapVersion": {
        "Assertions": [
          {
            "Assert": {
              "Fn::Not": [
                {
                  "Fn::Contains": [
                    [
                      "1",
                      "2",
                      "3",
                      "4",
                      "5",
                    ],
                    {
                      "Ref": "BootstrapVersion",
                    },
                  ],
                },
              ],
            },
            "AssertDescription": "CDK bootstrap stack version 6 required. Please run 'cdk bootstrap' with a recent version of the CDK CLI.",
          },
        ],
      },
    },
  },
}
`;
